jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL2-bad-LANGTAG.shex
# STRING_LITERAL2 with bad LANGTAG
# source: turtle-syntax-bad-lang-01.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ["string"@1]
}
